--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 PORT=8000
 MONGODB_URL = mongodb+srv://Godofwar2452003:Bahuy245@cluster0.lrlqb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_ACCESS_KEY = secretkey
